--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mockserver-node": "^5.7.2"
   }
 }
