--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-chartjs-2": "^2.8.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
@@ -35,6 +35,6 @@
     ]
   },
   "devDependencies": {
-    "mockserver-node": "^5.7.2"
+    "mockserver-node": "^5.10.0"
   }
 }
